First version hamburger menu
I finished creating hamburger menu, and create function which add active
class to element which is given in the argument of the function.
I started work of menu list.

--- a/src/components/hamburgerMenu.scss
+++ b/src/components/hamburgerMenu.scss
@@ -1,6 +1,8 @@
 @import '../setting/varAndMixin.scss';
 
 .hamburger {
+    $hamburger: &;
+
     @include flexCenter;
     width: 70px;
     height: 50px;
@@ -15,8 +17,10 @@
         background-color: $color-black;
         position: relative;
         width: 50px;
-        height: 5px;
+        height: 4px;
         border-radius: 15px;
+        transform: scale(1);
+        transition: transform 0.25s ease-in-out 0.25s;
 
         &::before,
         &::after {
@@ -25,16 +29,57 @@
             position: absolute;
             left: 0;
             width: 50px;
-            height: 5px;
+            height: 4px;
             border-radius: 15px;
+            transition: transform 0.25s ease-in-out 0s;
         }
 
         &::before {
-            transform: translateY(10px);
+            transform: translateY(10px) scale(1) rotate(0deg);
         }
 
         &::after {
-            transform: translateY(-10px);
+            transform: translateY(-10px) scale(1) rotate(0deg);
+        }
+    }
+
+    &--active {
+        #{ $hamburger }__icon {
+            transform: scale(0.1);
+            transition: transform 0.25s ease-in-out;
+
+            &::before,
+            &::after {
+                transition: transform 0.25s ease-in-out 0.25s;
+            }
+
+            &::before {
+                transform: translateY(0px) scale(10) rotate(45deg);
+            }
+
+            &::after {
+                transform: translateY(0px) scale(10) rotate(-45deg);
+            }
         }
     }
 }
+
+//&:focus {
+//    .hamburger__icon {
+//        transform: scale(0.1);
+//        transition: transform 0.25s ease-in-out;
+//
+//        &::before,
+//        &::after {
+//            transition: transform 0.25s ease-in-out 0.25s;
+//        }
+//
+//        &::before {
+//            transform: translateY(0px) scale(10) rotate(45deg);
+//        }
+//
+//        &::after {
+//            transform: translateY(0px) scale(10) rotate(-45deg);
+//        }
+//    }
+//}
