--- a/src/body/body.scss
+++ b/src/body/body.scss
@@ -15,7 +15,7 @@ body {
         width: auto;
         height: auto;
 
-        .menu {
+        .nav__cointainer {
             background-color: $color-grey;
             width: 100vw;
             height: 60px;
