--- a/src/body/body.scss
+++ b/src/body/body.scss
@@ -6,12 +6,17 @@
     box-sizing: border-box;
     font-family: 'Teko',
         sans-serif;
+    scrollbar-width: none;
 }
 
 body {
     width: 100vw;
     height: 200vh;
     background-color: $color-white;
+
+    &::-webkit-scrollbar {
+        display: none
+    }
 
     nav {
         width: auto;
@@ -25,26 +30,21 @@ body {
             justify-content: space-between;
             align-items: center;
         }
-        .background{
+
+        .background {
+            @include backgroundIce;
             background: transparent;
             backdrop-filter: blur(5px);
-            box-shadow: $color-grey 0px 1px 15px;
+            box-shadow: $color-grey 0px 0px 10px;
             position: absolute;
             width: 100vw;
             height: 60px;
-            &::before{
-                content: '';
-                position: absolute;
-                width: 100%;
-                height: 100%;
-                background-color: $color-grey;
-                opacity: 0.3;
-            }
+
         }
     }
 }
 
-.test{
+.test {
     width: 50vw;
     height: 100vh;
     background-color: $color-purple;
