--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -1,14 +1,16 @@
 @import '../setting/varAndMixin.scss';
 
 .menu {
+    @include backgroundIce;
     width: 360px;
     height: 280px;
     background: transparent;
     backdrop-filter: blur(5px);
-    box-shadow: $color-grey 0px 1px 15px;
+    box-shadow: $color-grey 0px 0px 10px;
     position: absolute;
     transform: translateY(-360px);
     transition: transform 1s ease-in-out;
+    
 
     &__list {
         font-size: 20px;
