--- a/src/setting/varAndMixin.scss
+++ b/src/setting/varAndMixin.scss
@@ -1,6 +1,6 @@
 // vars
 $color-purple: rgb(77, 10, 131);
-$color-white: rgb(255, 255, 255);
+$color-white: #edf1f4;
 $color-black: rgb(18, 18, 18);
 $color-grey: rgb(163, 163, 160);
 $color-turquis: rgb(50, 134, 139);
@@ -11,4 +11,16 @@ $color-red: rgb(236, 78, 50);
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+@mixin backgroundIce {
+    &::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-color: $color-grey;
+        opacity: 0.1;
+        z-index: -10;
+    }
 }
