First version description of association
I made the first version but I'm not happy with it yet, so
in the future I will change this mini project

--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -2,7 +2,7 @@
 
 .menu {
     @include backgroundIce;
-    width: 360px;
+    width: 100vw;
     height: 280px;
     background: transparent;
     backdrop-filter: blur(5px);
@@ -10,15 +10,20 @@
     position: absolute;
     transform: translateY(-360px);
     transition: transform 1s ease-in-out;
-    
+
 
     &__list {
-        font-size: 20px;
-        font-weight: 600;
+        font-size: 1.6rem;
+        font-weight: 700;
     }
 
     &__item {
         padding: 10px;
+
+        &:hover {
+            box-shadow: inset rgba(163, 163, 160, 0.329) 0px 0px 100px,
+                $color-grey 0px 0px 5px;
+        }
     }
 
     &__icon {
