--- a/src/body/body.scss
+++ b/src/body/body.scss
@@ -6,25 +6,38 @@
     box-sizing: border-box;
     font-family: 'Teko',
         sans-serif;
-    scrollbar-width: none;
 }
 
 body {
     width: 100vw;
     height: 200vh;
     background-color: $color-white;
+    overflow-x: hidden;
 
     &::-webkit-scrollbar {
-        display: none
+        width: 16px;
+        display: none;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgba(163, 163, 160, 0.356);
+        backdrop-filter: blur(5px);
+        box-shadow: $color-grey 1px 1px 10px;
+        border-radius: 6px;
     }
 
     nav {
-        width: auto;
+        width: 100vw;
         height: auto;
         position: fixed;
+        top: 0;
 
         .nav__cointainer {
-            width: 100vw;
+            width: 100%;
             height: 60px;
             display: flex;
             justify-content: space-between;
@@ -37,27 +50,36 @@ body {
             backdrop-filter: blur(5px);
             box-shadow: $color-grey 0px 0px 10px;
             position: absolute;
-            width: 100vw;
+            width: 100%;
             height: 60px;
 
         }
     }
 }
 
-.test {
-    width: 50vw;
-    height: 100vh;
-    background-color: $color-purple;
-    transform: translateX(100px);
+main {
+    @include flexCenter;
     position: absolute;
-    z-index: -19;
+    top: 60px;
+    width: 100vw;
+    height: auto;
+    z-index: -10;
 }
+
 
 // small devices (smartphons on landscape oreintation, 768px and up)
 @media (max-width: 768px) and (orientation: landscape) {}
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+    body {
+        nav {
+            .nav__cointainer {
+                padding: 0px 20px 0px 0px;
+            }
+        }
+    }
+}
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {}
