--- a/src/components/association.scss
+++ b/src/components/association.scss
@@ -3,46 +3,44 @@
 .association {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(4, auto);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    padding: 10px;
 
     &__logo {
         grid-column: 1/3;
         grid-row: 1/2;
-        //position: absolute;
-        width: 80%;
-        min-width: 110px;
+        width: 130px;
         height: auto;
-        margin: 20px 0px 20px 20px;
+        margin: 0px 0px 10px 0px;
     }
 
     &__title {
-        grid-column: 4/5;
+        grid-column: 1/3;
         grid-row: 1/2;
         width: 220px;
-        padding: 90px 10px 0px 0px;
         word-wrap: break-word;
         font-size: 1.85rem;
         line-height: 2.2rem;
         font-weight: 900;
         letter-spacing: 1px;
+        display: flex;
+        align-self: flex-end;
+        transform: translateX(60%);
+        padding: 0px 0px 10px 0px;
     }
 
-    &__description{
+    &__description {
         grid-column: 1/5;
         grid-row: 2/5;
-        padding: 0px 20px 0px 20px;
+        padding: 0px 10px 0px 10px;
         line-height: 1.1rem;
     }
 
-    .test {
-        width: 50vw;
-        height: 100vh;
-        background-color: $color-purple;
-        transform: translateX(100px);
-        position: absolute;
-        z-index: -19;
+    &__ilustration {
+        display: none;
     }
+
 }
 
 // small devices (smartphons on landscape oreintation, 768px and up)
@@ -51,17 +49,62 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .association {
+        width: 80%;
+        //grid-template-columns: 15% repeat(3, auto);
 
         &__logo {
+            grid-column: 1/2;
+            width: 200px;
 
-            //position: absolute;
-            width: 30%;
         }
+
+        &__title {
+            width: 400px;
+            padding: 0px 0px 5% 0px;
+            font-size: 3rem;
+            line-height: 3rem;
+        }
+
+        &__description {
+            grid-column: 1/6;
+            grid-row: 2/5;
+            padding: 0px;
+            line-height: 1.1rem;
+        }
+
+        &__ilustration {
+            grid-column: 3/5;
+            grid-row: 1/5;
+            display: inline-block;
+            width: 30vw;
+            visibility: hidden;
+        }
+
     }
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+    .association {
+        &__logo {
+            grid-column: 1/2;
+            width: 230px;
+        }
+
+        &__ilustration {
+            grid-column: 3/5;
+            grid-row: 1/5;
+            display: inline-block;
+            width: 30vw;
+        }
+    }
+}
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+    .association {
+        &__description {
+            grid-column: 1/3;
+        }
+    }
+}
