--- a/src/components/association.scss
+++ b/src/components/association.scss
@@ -4,7 +4,7 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     padding: 10px;
 
     &__logo {
@@ -32,13 +32,22 @@
 
     &__description {
         grid-column: 1/5;
-        grid-row: 2/5;
+        grid-row: 2/4;
         padding: 0px 10px 0px 10px;
         line-height: 1.1rem;
     }
 
     &__ilustration {
         display: none;
+    }
+
+    &__button {
+        grid-column: 1/3;
+        grid-row: 3/4;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        transform: translateY(-30%)
     }
 
 }
@@ -79,6 +88,10 @@
             width: 30vw;
             visibility: hidden;
         }
+        &__button {
+            grid-column: 1/3;
+            grid-row: 2/3;
+        }
 
     }
 }
@@ -91,20 +104,21 @@
             width: 230px;
         }
 
+        &__description {
+            grid-column: 1/3;
+        }
+
         &__ilustration {
             grid-column: 3/5;
             grid-row: 1/5;
             display: inline-block;
             width: 30vw;
         }
+        &__button{
+            transform: translateY(-15%)
+        }
     }
 }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
-    .association {
-        &__description {
-            grid-column: 1/3;
-        }
-    }
-}
+@media (min-width: 1200px) {}
