--- a/src/components/menu.scss
+++ b/src/components/menu.scss
@@ -3,7 +3,7 @@
 .menu {
     @include backgroundIce;
     width: 100vw;
-    height: 280px;
+    height: 240px;
     background: transparent;
     backdrop-filter: blur(8px);
     box-shadow: $color-grey 0px 0px 10px;
@@ -12,17 +12,14 @@
     transition: transform 1s ease-in-out;
 
     &__list {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
         font-weight: 700;
     }
 
     &__item {
-        padding: 10px;
+        padding: 10px 10px;
+        width: 100vw;
 
-        &:hover {
-            box-shadow: inset rgba(163, 163, 160, 0.329) 0px 0px 100px,
-                $color-grey 0px 0px 5px;
-        }
     }
 
     &__icon {
@@ -30,12 +27,66 @@
     }
 
     &__link {
+        display: inline-block;
+        width: 100%;
+        height: 130%;
         text-decoration: none;
+        list-style: none;
         color: $color-black;
-        padding-left: 10px;
+        padding: 5px 10px 5px 10px;
+
+        &:hover {
+            box-shadow: inset rgba(163, 163, 160, 0.329) 0px 0px 100px,
+                $color-grey 0px 0px 5px;
+        }
     }
 
     &--active {
-        transform: translateY(170px);
+        transform: translateY(149px);
+    }
+}
+
+// small devices (smartphons on landscape oreintation, 768px and up)
+@media (max-width: 768px) and (orientation: landscape) {}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    .menu {
+        height: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        transform: translateY(-60px);
+
+        &__list {
+            font-size: 0.7rem;
+            font-weight: 700;
+            padding-right: 100px;
+        }
+
+        &__item {
+            display: inline-block;
+            width: auto;
+            height: 100%;
+
+        }
+
+        &__link {
+            padding: 10px 20px;
+        }
+
+        &--active {
+            transform: translateY(0px);
+
+        }
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .menu {
+        &__list {
+            font-size: 1rem;
+        }
     }
 }
