--- a/src/body/body.scss
+++ b/src/body/body.scss
@@ -73,13 +73,18 @@ body {
 }
 
 main {
-    @include flexCenter;
     position: absolute;
     top: 60px;
     width: 100vw;
     height: auto;
 }
 
+
+.project__wrapper{
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+}
 
 // small devices (smartphons on landscape oreintation, 768px and up)
 @media (max-width: 768px) and (orientation: landscape) {}
