--- a/src/components/association.scss
+++ b/src/components/association.scss
@@ -1,11 +1,16 @@
 @import '../setting/varAndMixin.scss';
 
 .association {
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    padding: 10px;
+    display: inline-block;
+    min-width: 100vw;
+
+    &__wrapper {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        padding: 10px;
+    }
 
     &__logo {
         grid-column: 1/3;
@@ -42,18 +47,27 @@
     }
 
     &__button {
-        grid-column: 1/3;
+        grid-column: 1/4;
         grid-row: 3/4;
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: flex-end;
-        transform: translateY(-30%)
+        padding: 10px;
+        transform: translateY(-10%)
     }
 
 }
 
 // small devices (smartphons on landscape oreintation, 768px and up)
-@media (max-width: 768px) and (orientation: landscape) {}
+@media (max-width: 768px) and (orientation: landscape) {
+    .association {
+
+        &__button {
+
+            transform: translateY(-70%)
+        }
+    }
+}
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
@@ -77,7 +91,6 @@
         &__description {
             grid-column: 1/6;
             grid-row: 2/5;
-            padding: 0px;
             line-height: 1.1rem;
         }
 
@@ -88,6 +101,7 @@
             width: 30vw;
             visibility: hidden;
         }
+
         &__button {
             grid-column: 1/3;
             grid-row: 2/3;
@@ -113,9 +127,6 @@
             grid-row: 1/5;
             display: inline-block;
             width: 30vw;
-        }
-        &__button{
-            transform: translateY(-15%)
         }
     }
 }
