--- a/src/components/button.scss
+++ b/src/components/button.scss
@@ -1,5 +1,36 @@
 @import '../setting/varAndMixin.scss';
 
-.button{
-    
+.button {
+
+    border: transparent;
+    //outline: transparent;
+
+    &__link {
+        display: inline-block;
+        text-decoration: none;
+        color: $color-white;
+        font-size: 1.3rem;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 5px 20px 10px 20px;
+        background-color: $color-purple;
+        position: relative;
+
+        &::after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            border: 1px solid $color-black;
+            left: 0px;
+            bottom: 0px;
+            transform: translate(7px, -7px);
+            position: absolute;
+            transition: transform 0.25s ease-in-out;
+        }
+
+        &:hover::after {
+            transform: translate(-7px, 7px);
+            transition: transform 0.25s ease-in-out;
+        }
+    }
 }
