--- a/src/setting/varAndMixin.scss
+++ b/src/setting/varAndMixin.scss
@@ -1,6 +1,7 @@
 // vars
 $color-purple: rgb(77, 10, 131);
-$color-white: #edf1f4;
+$color-purple-faded: rgb(99, 50, 139);
+$color-white: rgb(237, 241, 244);
 $color-black: rgb(18, 18, 18);
 $color-grey: rgb(163, 163, 160);
 $color-turquis: rgb(50, 134, 139);
