--- a/src/components/association/association.scss
+++ b/src/components/association/association.scss
@@ -1,8 +1,8 @@
-@import '../setting/varAndMixin.scss';
+@import '../../setting/varAndMixin.scss';
 
 .association {
     display: inline-block;
-    min-width: 100vw;
+    width: 100%;
 
     &__wrapper {
         width: 100%;
@@ -25,7 +25,7 @@
         grid-row: 1/2;
         width: 220px;
         word-wrap: break-word;
-        font-size: 1.85rem;
+        font-size: $text-size-h1;
         line-height: 2.2rem;
         font-weight: 900;
         letter-spacing: 1px;
@@ -61,10 +61,12 @@
 // small devices (smartphons on landscape oreintation, 768px and up)
 @media (max-width: 768px) and (orientation: landscape) {
     .association {
+        &__wrapper {
+            grid-template-rows: 1fr 1fr 0.6fr;
+        }
 
         &__button {
-
-            transform: translateY(-70%)
+            align-items: flex-start;
         }
     }
 }
@@ -72,8 +74,9 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .association {
-        width: 80%;
-        //grid-template-columns: 15% repeat(3, auto);
+        &__wrapper {
+            grid-template-rows: repeat(2, 1fr);
+        }
 
         &__logo {
             grid-column: 1/2;
@@ -89,16 +92,14 @@
         }
 
         &__description {
-            grid-column: 1/6;
-            grid-row: 2/5;
+            grid-row: 2/3;
             line-height: 1.1rem;
         }
 
         &__ilustration {
-            grid-column: 3/5;
-            grid-row: 1/5;
+            grid-column: 3/4;
+            grid-row: 1/2;
             display: inline-block;
-            width: 30vw;
             visibility: hidden;
         }
 
@@ -122,14 +123,18 @@
             grid-column: 1/3;
         }
 
-        &__ilustration {
-            grid-column: 3/5;
-            grid-row: 1/5;
-            display: inline-block;
-            width: 30vw;
-        }
     }
 }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+    .association {
+        &__button {
+            transform: translateY(-25%)
+        }
+
+        &__ilustration {
+            grid-row: 1/3;
+        }
+    }
+}
