--- a/src/body/body.scss
+++ b/src/body/body.scss
@@ -68,6 +68,7 @@ body {
     height: auto;
     position: relative;
     top: 500px;
+    opacity: 0.85;
 }
 
 .main {
@@ -82,21 +83,22 @@ body {
     @include backgroundIce;
     //position: relative;
     //width: auto;
-    height: 100%;
-    margin: 10px;
-    padding: 10px;
+    height: auto;
+    margin: 20px 5px;
+    padding-bottom: 1px;
 
-    &__title{
+    &__title {
         position: absolute;
         left: 50%;
-        top: -10%;
+        top: -30px;
         transform: translateX(-50%);
         font-size: $text-size-h2;
         text-transform: uppercase;
         padding: 10px 20px;
         white-space: nowrap;
+        font-weight: 500;
 
-        &::after{
+        &::after {
             content: "";
             width: 100%;
             height: 100%;
@@ -109,6 +111,10 @@ body {
         }
     }
 
+    &__image {
+        width: 100%;
+        height: auto;
+    }
 }
 
 // small devices (smartphons on landscape oreintation, 768px and up)
@@ -130,6 +136,25 @@ body {
     body {
         .triangles {
             top: -240px;
+        }
+
+        .project-wrapper {
+            //display: flex;
+            //flex-direction: row;
+            //flex-wrap: wrap;
+            //justify-content: space-around;
+            //&:last-child {
+            //    //justify-self: flex-start;
+            //    justify-content: flex-start;
+            //}
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: auto auto;
+            
+            &__image {
+                grid-row: 1/2;
+                grid-column: 1/3;
+            }
         }
     }
 }
