--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -1,37 +1,67 @@
 @import '../../setting/varAndMixin.scss';
 
-.project{
-    width: 100%;
-    height: 350px;
+.project {
+    width: calc(100% - 20px);
+    height: auto;
     display: grid;
-    grid-template-columns: 60% 40% ;
-    grid-template-rows: 50% auto 10% ;
-    &__imgage-wrapper{
+    grid-template-columns: 60% 40%;
+    grid-template-rows: auto auto auto;
+    background-color: $color-white;
+    margin: 20px 10px;
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: rgb(99, 98, 98) 5px 10px 10px;
+
+    &__imgage-wrapper {
         @include flexCenter;
         grid-column: 1/2;
         grid-row: 1/2;
         overflow: hidden;
     }
-    &__image{
+
+    &__image {
         width: 100%;
         height: auto;
-        //background-size: cover;
     }
-    &__title{
+
+    &__title {
         grid-column: 2/3;
         grid-row: 1/2;
+        display: flex;
+        align-items: flex-end;
+        transform: translateY(-25px);
+        margin: 10px;
+        font-size: $text-size-h2;
+        font-weight: 500;
+        line-height: $text-size-h2;
     }
-    &__date{
+
+    &__date {
         grid-column: 2/3;
         grid-row: 1/2;
+        display: flex;
+        align-items: flex-end;
+        transform: translateY(-0px);
+        margin: 0px 10px;
+        opacity: 0.6;
     }
-    &__description{
+
+    &__description {
         grid-column: 1/3;
         grid-row: 2/3;
+        margin: 10px 0px;
     }
-    &__link{
+
+    &__link {
+        @include flexCenter;
         grid-column: 1/3;
         grid-row: 3/4;
+        text-decoration: none;
+        color: $color-black;
+
+        &-icon-touch {
+            margin: 5px;
+        }
     }
 }
 
@@ -42,11 +72,59 @@
 @media (min-width: 768px) {
     .project {
         height: 400px;
+
+        &__link {
+            position: relative;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 200px;
+
+            &-icon-touch {
+                margin: 5px 10px;
+            }
+        }
     }
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+    .project {
+        width: 80%;
+        justify-self: center;
+        //position: absolute;
+        //justify-self: flex-start;
+        //margin-top: -20%;
+
+        //&:nth-of-type(2n+1) {
+        //    margin-top: 25%;
+        //    justify-self: flex-end;
+        //}
+        //&:nth-of-type(2n) {
+        //    margin-top: -20%;
+        //    justify-self: flex-start;
+        //}
+        //&:nth-of-type(2) {
+        //    margin-top: 20px;
+        //}
+        &__wrapper{
+            @include flexCenter;
+        }
+        &-left{
+            grid-column: 1/2;
+            grid-row: 2/3;
+            //margin-bottom: 100px;
+        }
+        &-right{
+            grid-column: 2/3;
+            grid-row: 2/3;
+        }
+
+    }
+}
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+    .project {
+        width: 48%;
+    }
+}
