--- a/src/body/body.scss
+++ b/src/body/body.scss
@@ -4,7 +4,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Teko',
+    //font-family: 'Teko',
+    //    sans-serif;
+    font-family: 'Ubuntu',
         sans-serif;
 }
 
@@ -81,8 +83,6 @@ body {
 
 .project-wrapper {
     @include backgroundIce;
-    //position: relative;
-    //width: auto;
     height: auto;
     margin: 20px 5px;
     padding-bottom: 1px;
@@ -90,9 +90,9 @@ body {
     &__title {
         position: absolute;
         left: 50%;
-        top: -30px;
+        top: -20px;
         transform: translateX(-50%);
-        font-size: $text-size-h2;
+        font-size: $text-size-normal;
         text-transform: uppercase;
         padding: 10px 20px;
         white-space: nowrap;
@@ -107,7 +107,7 @@ body {
             top: 0;
             background-color: $color-white;
             z-index: -10;
-            box-shadow: $color-grey 0px 0px 10px;
+            box-shadow: 0 9px 10px -6px black;
         }
     }
 
@@ -139,21 +139,17 @@ body {
         }
 
         .project-wrapper {
-            //display: flex;
-            //flex-direction: row;
-            //flex-wrap: wrap;
-            //justify-content: space-around;
-            //&:last-child {
-            //    //justify-self: flex-start;
-            //    justify-content: flex-start;
-            //}
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: auto auto;
-            
+            grid-template-rows: auto;
+
+            &__title{
+                font-size: $text-size-h2;
+                left: 75%;
+            }
+
             &__image {
-                grid-row: 1/2;
-                grid-column: 1/3;
+                display:none;
             }
         }
     }
