--- a/src/components/association/association.scss
+++ b/src/components/association/association.scss
@@ -31,8 +31,9 @@
         letter-spacing: 1px;
         display: flex;
         align-self: flex-end;
-        transform: translateX(60%);
+        transform: translateX(55%);
         padding: 0px 0px 10px 0px;
+        text-shadow: 3px 4px 4px grey;
     }
 
     &__description {
@@ -47,7 +48,7 @@
     }
 
     &__button {
-        grid-column: 1/4;
+        grid-column: 1/5;
         grid-row: 3/4;
         display: flex;
         justify-content: flex-start;
