--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -10,7 +10,7 @@
     margin: 20px 10px;
     padding: 10px;
     border-radius: 4px;
-    box-shadow: rgb(99, 98, 98) 5px 10px 10px;
+    box-shadow: 0 9px 10px -6px black;
 
     &__imgage-wrapper {
         @include flexCenter;
@@ -77,7 +77,7 @@
             position: relative;
             left: 50%;
             transform: translateX(-50%);
-            width: 200px;
+            width: 250px;
 
             &-icon-touch {
                 margin: 5px 10px;
@@ -89,34 +89,17 @@
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
     .project {
-        width: 80%;
+        width: 90%;
         justify-self: center;
-        //position: absolute;
-        //justify-self: flex-start;
-        //margin-top: -20%;
-
-        //&:nth-of-type(2n+1) {
-        //    margin-top: 25%;
-        //    justify-self: flex-end;
-        //}
-        //&:nth-of-type(2n) {
-        //    margin-top: -20%;
-        //    justify-self: flex-start;
-        //}
-        //&:nth-of-type(2) {
-        //    margin-top: 20px;
-        //}
         &__wrapper{
             @include flexCenter;
-        }
-        &-left{
-            grid-column: 1/2;
-            grid-row: 2/3;
-            //margin-bottom: 100px;
-        }
-        &-right{
-            grid-column: 2/3;
-            grid-row: 2/3;
+
+            &-left{
+                margin-bottom: 20%;
+            }
+            &-right{
+                margin-top:20%;
+            }
         }
 
     }
@@ -125,6 +108,16 @@
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
     .project {
-        width: 48%;
+        width: 70%;
+        &__wrapper{
+            @include flexCenter;
+
+            &-left{
+                margin-bottom: 10%;
+            }
+            &-right{
+                margin-top:10%;
+            }
+        }
     }
 }
