--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -3,28 +3,29 @@
 .button {
     @include flexCenter;
     border: transparent;
-    border-radius: 25px;
     position: relative;
     overflow: hidden;
     
     &__link {
-        display: inline-block;
         text-decoration: none;
         color: $color-white;
         font-size: $text-size-normal;
         text-transform: uppercase;
-        letter-spacing: 1px;
+        letter-spacing: 0.8px;
         padding: 20px 40px 20px 40px;
         background-color: $color-purple;
-        opacity: 0.9;
-        transition: opacity 0.25s ease-in-out;
-        &:hover{
-            opacity: 1;
-            transition: opacity 0.25s ease-in-out;
+        border-radius: 30px;
+        transform: scale(0.95);
+        transition: transform 0.25s ease-in-out;
+
+        &:hover {
+            transform: scale(1);
+            transition: transform 0.25s ease-in-out;
         }
 
     }
-    &__icon{
+
+    &__icon {
         width: 15px;
         height: 15px;
         border-right: 3px solid $color-white;
@@ -36,21 +37,23 @@
         transition: transform 0.25s ease-in-out;
 
 
-        &::before{
-            content:'';
+        &::before {
+            content: '';
             width: 17px;
             height: 3px;
             background-color: $color-white;
             position: absolute;
             top: 50%;
-            transform:rotate(-45deg) translateX(-10%) translateY(-7px);
+            transform: rotate(-45deg) translateX(-10%) translateY(-7px);
         }
     }
-    &:hover &__icon{
+
+    &:hover &__icon {
         transform: translateX(0px) translateY(-50%)rotate(45deg);
         transition: transform 0.25s ease-in-out;
     }
 }
+
 // small devices (smartphons on landscape oreintation, 768px and up)
 @media (max-width: 768px) and (orientation: landscape) {}
 
