--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -5,16 +5,16 @@
     height: auto;
     display: grid;
     grid-template-columns: 60% 40%;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto;
     background-color: $color-white;
     margin: 20px 10px;
     padding: 10px;
     border-radius: 4px;
-    box-shadow: 0 9px 10px -6px black;
+    box-shadow: 7px 15px 20px -6px black;
 
     &__imgage-wrapper {
         @include flexCenter;
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 1/2;
         overflow: hidden;
     }
@@ -25,15 +25,44 @@
     }
 
     &__title {
-        grid-column: 2/3;
-        grid-row: 1/2;
         display: flex;
-        align-items: flex-end;
-        transform: translateY(-25px);
-        margin: 10px;
+        align-items: center;
+        grid-column: 1/3;
+        grid-row: 1/2;
+        height: 10%;
+        transform: translate(-10px, 930%);
+        color: $color-white;
         font-size: $text-size-h2;
-        font-weight: 500;
         line-height: $text-size-h2;
+        font-weight: 400;
+        position: relative;
+        z-index: 10;
+
+        &::after {
+            content: '';
+            position: absolute;
+            height: 30px;
+            width: 100%;
+            background-color: $color-purple;
+            box-shadow: 0px 10px 10px -6px black;
+            z-index: -5;
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            height: 0px;
+            width: 0px;
+            border-top: 10px solid $color-purple;
+            border-left: 10px solid transparent;
+            transform: translate(-10px, 20px) rotate(-0deg);
+            box-shadow: 0px -10px 0px $color-purple,
+                0px -15px 0px $color-purple,
+                0px -20px 0px $color-purple,
+                0px -25px 0px $color-purple,
+                0px -30px 0px $color-purple;
+            z-index: -5;
+        }
     }
 
     &__date {
@@ -49,7 +78,7 @@
     &__description {
         grid-column: 1/3;
         grid-row: 2/3;
-        margin: 10px 0px;
+        margin: 20px 0px;
     }
 
     &__link {
@@ -61,6 +90,12 @@
 
         &-icon-touch {
             margin: 5px;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        &:hover &-icon-touch {
+            transform:  scale(1.2);
+            transition: transform 0.2s ease-in-out;
         }
     }
 }
@@ -71,7 +106,15 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .project {
+        width: 60%;
         height: 400px;
+        margin-left: auto;
+        margin-right: auto;
+
+        &__title {
+            height: 20%;
+            transform: translate(-10px, 450%);
+        }
 
         &__link {
             position: relative;
@@ -91,15 +134,18 @@
     .project {
         width: 90%;
         justify-self: center;
-        &__wrapper{
-            @include flexCenter;
 
-            &-left{
-                margin-bottom: 20%;
+        &__wrapper {
+
+
+            &-left {
+                margin-top: -30%;
             }
-            &-right{
-                margin-top:20%;
+
+            &-right {
+                margin-top: 10%;
             }
+
         }
 
     }
@@ -109,15 +155,5 @@
 @media (min-width: 1200px) {
     .project {
         width: 70%;
-        &__wrapper{
-            @include flexCenter;
-
-            &-left{
-                margin-bottom: 10%;
-            }
-            &-right{
-                margin-top:10%;
-            }
-        }
     }
 }
