--- a/src/setting/varAndMixin.scss
+++ b/src/setting/varAndMixin.scss
@@ -10,6 +10,7 @@ $color-red: rgb(236, 78, 50);
 $text-size-normal: 1rem;
 $text-size-h1: 1.5rem;
 $text-size-h2: 1.2rem;
+$text-size-attribution: 0.3rem;
 
 // mixins
 @mixin flexCenter {
