--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -24,17 +24,20 @@
     }
 
     &__link {
+        font-family: 'Roboto',
+        sans-serif;
         display: inline-block;
         width: 100%;
         height: 130%;
         text-decoration: none;
+        text-transform: uppercase;
         list-style: none;
         color: $color-black;
         padding: 5px 10px 5px 10px;
 
         &:hover {
             box-shadow: inset rgba(163, 163, 160, 0.329) 0px 0px 100px,
-                $color-grey 0px 0px 5px;
+                rgb(139, 139, 139) 0px 0px 10px;
         }
     }
 
@@ -53,29 +56,26 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        transform: translateY(-60px);
+        transform: translateY(0px);
 
         &__list {
             font-size: 0.7rem;
             font-weight: 700;
-            padding-right: 100px;
+            padding-right: 80px;
         }
 
         &__item {
             display: inline-block;
             width: auto;
             height: 100%;
+            padding: 1px 1px;
 
         }
 
         &__link {
-            padding: 10px 20px;
+            padding: 15px 15px;
         }
 
-        &--active {
-            transform: translateY(0px);
-
-        }
     }
 }
 
@@ -83,7 +83,7 @@
 @media (min-width: 992px) {
     .menu {
         &__list {
-            font-size: 1rem;
+            font-size: 0.9rem;
         }
     }
 }
