--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -1,5 +1,52 @@
 @import '../../setting/varAndMixin.scss';
 
+.projects-wrapper {
+    @include backgroundIce;
+    height: auto;
+    margin: 20px 0px;
+    padding-bottom: 30px;
+    box-shadow: 7px 15px 20px -6px black,
+        0px 0px 5px rgba(145, 144, 144, 0.493);
+    transform: translateY(5%);
+
+    &__title {
+        position: absolute;
+        left: 50%;
+        top: -20px;
+        transform: translateX(-50%);
+        font-size: $text-size-normal;
+        text-transform: uppercase;
+        padding: 10px 20px;
+        white-space: nowrap;
+        font-weight: 500;
+
+        &::after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            background-color: $color-white;
+            z-index: -10;
+            box-shadow: 4px 10px 20px -6px black,
+                3px 0px 15px -10px black;
+        }
+    }
+
+    &__illustartion__wrapper {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
+    &__illustartion {
+        width: 70%;
+        margin-top: 50px;
+
+    }
+}
+
 .project {
     width: calc(100% - 20px);
     height: auto;
@@ -9,8 +56,8 @@
     background-color: $color-white;
     margin: 20px 10px;
     padding: 10px;
-    border-radius: 4px;
-    box-shadow: 7px 15px 20px -6px black;
+    border-radius: 5px;
+    box-shadow: 6px 15px 30px -6px black;
 
     &__imgage-wrapper {
         @include flexCenter;
@@ -66,37 +113,31 @@
     }
 
     &__date {
-        grid-column: 2/3;
-        grid-row: 1/2;
+        grid-column: 1/2;
+        grid-row: 2/3;
+        height: 30px;
+        margin: 7px 0px;
         display: flex;
-        align-items: flex-end;
-        transform: translateY(-0px);
-        margin: 0px 10px;
-        opacity: 0.6;
+        align-items: center;
+        justify-content: flex-start;
+        opacity: 0.5;
     }
 
     &__description {
         grid-column: 1/3;
         grid-row: 2/3;
-        margin: 20px 0px;
+        margin: 35px 0px;
     }
 
-    &__link {
+    &__button__wrpapper {
         @include flexCenter;
         grid-column: 1/3;
-        grid-row: 3/4;
-        text-decoration: none;
-        color: $color-black;
+        height: 60px;
+        position: relative;
+    }
 
-        &-icon-touch {
-            margin: 5px;
-            transition: transform 0.2s ease-in-out;
-        }
-
-        &:hover &-icon-touch {
-            transform:  scale(1.2);
-            transition: transform 0.2s ease-in-out;
-        }
+    &__button {
+        transform: scale(0.7);
     }
 }
 
@@ -107,7 +148,7 @@
 @media (min-width: 768px) {
     .project {
         width: 60%;
-        height: 400px;
+        height: 550px;
         margin-left: auto;
         margin-right: auto;
 
@@ -116,21 +157,46 @@
             transform: translate(-10px, 450%);
         }
 
-        &__link {
-            position: relative;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 250px;
+        &__date {
+            margin: 22px 0px;
+        }
 
-            &-icon-touch {
-                margin: 5px 10px;
-            }
+        &__description {
+            margin: 55px 0px;
+        }
+
+        &__button__wrpapper {
+            position: relative;
+        }
+
+        &__button {
+            position: absolute;
+            right: -60px;
+            transform: scale(0.6);
         }
     }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
+    .projects-wrapper {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        padding-bottom: 60px;
+
+        &__title {
+            font-size: $text-size-h2;
+            left: 25%;
+        }
+
+        &__illustartion {
+            max-width: 370px;
+            margin-top: 0px;
+            transform: translateY(120px);
+        }
+    }
+
     .project {
         width: 90%;
         justify-self: center;
@@ -153,7 +219,24 @@
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
+    .projects-wrapper {
+
+        &__illustartion {
+            transform: translateY(100px);
+        }
+    }
+
     .project {
         width: 70%;
+    }
+}
+
+@media (min-width: 1600px) {
+
+    .projects-wrapper {
+
+        &__illustartion {
+            transform: translateY(80px);
+        }
     }
 }
